--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "eslint": "^8.34.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
+  },
+  "dependencies": {
+    "@constl/ipa": "^0.6.32"
   }
 }
