--- a/package.json
+++ b/package.json
@@ -2,22 +2,62 @@
   "name": "GRU",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "nettoyer": "rimraf dist",
+    "compiler": "pnpm versioner && pnpm nettoyer && pnpm ttsc -p tsconfig.build.json",
+    "test": "node --no-warnings --experimental-vm-modules ./node_modules/jest/bin/jest.js --runInBand",
+    "couverture": "pnpm test -- --coverage",
+    "formatter": "pnpm prettier --ignore-path .gitignore --write \"**/*.+(js|ts|json)\" && pnpm eslint --ext .js,.ts ruxeel",
+    "publier": "pnpm compiler && (git commit -a -m 'version' || true) && pnpm publish",
+    "versioner": "pnpm genversion  --es6 --semi ruxeel/relesaxïk.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@constl/ipa": "^0.6.32",
+    "@types/jest": "^29.4.0",
     "@types/node": "^18.13.0",
     "@typescript-eslint/eslint-plugin": "^5.52.0",
     "@typescript-eslint/parser": "^5.52.0",
     "eslint": "^8.34.0",
+    "eslint-config-prettier": "^8.6.0",
+    "genversion": "^3.1.1",
+    "jest": "^29.4.2",
     "ts-node": "^10.9.1",
-    "typescript": "^4.9.5"
+    "prettier": "^2.8.4",
+    "rimraf": "^4.1.2",
+    "ts-jest": "^29.0.5",
+    "tsconfig-paths": "^4.1.2",
+    "tscpaths": "^0.0.9",
+    "ttypescript": "^1.5.15",
+    "typescript": "^4.9.5",
+    "typescript-transform-paths": "^3.4.6"
+  },
+  "jest": {
+    "transform": {
+      "(.*).ts$": [
+        "ts-jest",
+        {
+          "useESM": true
+        }
+      ]
+    },
+    "preset": "ts-jest/presets/default-esm",
+    "moduleNameMapper": {
+      "^@/(.*).js$": "<rootDir>/ruxeel/$1",
+      "^@/(.*)$": "<rootDir>/ruxeel/$1"
+    },
+    "testMatch": [
+      "**/*.tjt.ts"
+    ],
+    "testEnvironment": "node"
+  },
+  "peerDependencies": {
+    "@constl/ipa": "^0.6.7"
   },
   "dependencies": {
-    "@constl/ipa": "^0.6.32"
   }
 }
