--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "compiler": "pnpm versioner && pnpm nettoyer && pnpm ttsc -p tsconfig.build.json",
     "test": "node --no-warnings --experimental-vm-modules ./node_modules/jest/bin/jest.js --runInBand",
     "couverture": "pnpm test -- --coverage",
-    "formatter": "pnpm prettier --ignore-path .gitignore --write \"**/*.+(js|ts|json)\" && pnpm eslint --ext .js,.ts ruxeel",
+    "formatter": "pnpm prettier --ignore-path .gitignore --write \"**/*.+(js|ts|json)\" && pnpm eslint --ext .js,.ts src",
     "publier": "pnpm compiler && (git commit -a -m 'version' || true) && pnpm publish",
-    "versioner": "pnpm genversion  --es6 --semi ruxeel/relesaxïk.ts"
+    "versioner": "pnpm genversion  --es6 --semi src/relesaxïk.ts"
   },
   "keywords": [],
   "author": "",
@@ -47,8 +47,8 @@
     },
     "preset": "ts-jest/presets/default-esm",
     "moduleNameMapper": {
-      "^@/(.*).js$": "<rootDir>/ruxeel/$1",
-      "^@/(.*)$": "<rootDir>/ruxeel/$1"
+      "^@/(.*).js$": "<rootDir>/src/$1",
+      "^@/(.*)$": "<rootDir>/src/$1"
     },
     "testMatch": [
       "**/*.tjt.ts"
